Fixed spacing

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,7 +1,3 @@
-/* .row {
-  margin: 0;
-} */
-
 .img {
   height: 200px;
   width: 250px;
@@ -47,6 +43,7 @@ h1 {
   color: #8c8c8c;
   background-color: #ff978f56;
   padding: 30px 0;
+  margin-bottom: 30px;
 }
 
 .service {
